--- a/MvcMovie/appsettings.json
+++ b/MvcMovie/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-a43da685-4c73-401e-a62f-f1502b91d404;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
